k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels: 
      component: frontend
  template:
    metadata:
      labels:
        component: frontend
    spec:
      containers:
        - name: client
          image: arjun332/medlem-frontend:latest
          ports:
            - containerPort: 80
