k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    # Removed rewrite-target
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: server-cluster-ip-service
            port:
              number: 5000

      - path: /?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: client-cluster-ip-service
            port:
              number: 80
